# ros_control_boilerplate

./: CMakeLists.txt
bioloid_control/: CMakeLists.txt  package.xml  replace.sh
bioloid_control/config/: bioloid_controllers.yaml  bioloid_controllers_gazebo.yaml  bioloid_controllers_no_group_controller.yaml
bioloid_control/include/bioloid_control/: bioloid_hw_interface.h
bioloid_control/launch/: bioloid_gazebo.launch  bioloid_visualize.launch
bioloid_control/src/: bioloid_hw_interface.cpp  bioloid_hw_main.cpp
